Fixes for editor buttons and history overflow

--- a/sass/_jstoolbar.sass
+++ b/sass/_jstoolbar.sass
@@ -2,6 +2,7 @@
 
 	button[type="button"]
 		background: white
+		color: #777
 		width: 1.8em
 		height: 1.8em
 		border-radius: 4px
